# rust-research

./: .gitignore  Cargo.toml  README.md  compile.sh  genArch.sh  memory.x  upload.sh
misc/: old.rs
rust-platforms/STM32F407/: Cargo.toml
rust-platforms/STM32F407/src/: adc1.rs  c_adc.rs  can1.rs  crc.rs  cryp.rs  dac.rs  dbg.rs  dcmi.rs  dma2.rs  ethernet_dma.rs  ethernet_mac.rs  ethernet_mmc.rs  ethernet_ptp.rs  exti.rs  flash.rs  fpu.rs  fpu_cpacr.rs  fsmc.rs  gpioa.rs  hash.rs  i2c3.rs  iwdg.rs  lib.rs  ltdc.rs  nvic_stir.rs  otg_fs_device.rs  otg_fs_global.rs  otg_fs_host.rs  otg_fs_pwrclk.rs  otg_hs_device.rs  otg_hs_global.rs  otg_hs_host.rs  otg_hs_pwrclk.rs  pwr.rs  rcc.rs  rng.rs  rtc.rs  sai1.rs  scb_actrl.rs  sdio.rs  (+13 more)
rust-platforms/sam3x8e/: Cargo.toml
src/: main.rs  peripherals.rs  pin.rs  pin_old.rs  pmc.rs  serial.rs  time.rs
src/examples/: pin_implementation_hal.rs
src/hal/: clock.rs  mod.rs  peripheral.rs  pin.rs  pmc.rs  serial.rs  time.rs
src/hal_sam3x8e/: clock.rs  core.rs  mod.rs  pin.rs  pmc.rs  serial.rs  time.rs
src/hal_stm32f407/: clock.rs  core.rs  mod.rs  pin.rs  serial.rs  time.rs
