[package]
name = "hal_app"
version = "0.1.0"
authors = ["wiebe <wdownload@xs4all.nl>"]
edition = "2018"

#[features]
#device-selected = []
#target_sam3x8e = ["target/sam3x8e", "device-selected"]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
#cortex-m-semihosting = "0.3.3"
#cortex-m-systick-countdown = "0.1.0"
panic-halt = "0.2.0"
static_assertions = "1.0.0"
nb = "0.1.2"

[[bin]]
name = "hal_app"
#path = "main.rs"
test = false
bench = false

[dependencies.sam3x8e]
path = "rust-platforms/sam3x8e"
features = ["rt"]
#version = "0.1.0"

# [dependencies.stm32f407]
# path = "rust-platforms/stm32f407"
# features = ["rt"]
# #version = "0.1.0"

[build]
# Pick ONE of these compilation targets
# target = "thumbv6m-none-eabi"    # Cortex-M0 and Cortex-M0+
target = "thumbv7m-none-eabi"    # Cortex-M3
#target = "thumbv7em-none-eabi"   # Cortex-M4 and Cortex-M7 (no FPU)
#target = "thumbv7em-none-eabihf" # Cortex-M4F and Cortex-M7F (with FPU)

[profile.release]
codegen-units = 1 # 1 better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s" # 3 Highest optimalization for speed. "s" is used for smaller flash size.
debug-assertions = false
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
#panic = 'unwind'
incremental = false
overflow-checks = false

[features]
rt = ["cortex-m-rt/device"]