[package]
name = "sam3x8e"
version = "0.1.0"
authors = ["wiebe <wdownload@xs4all.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.0"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.10"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]
